<resources>
    <string name="app_name">Timers</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="x">X</string>
    <string name="time_set">Set Time</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="start_over">Restart</string>
    <string name="remove_all">Clear</string>
    <string name="add_new">ADD NEW</string>
    <string name="get_from_db">DB</string>
    <string name="sync">Sync</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_app">About app</string>
    <string name="screenshot">Screenshot</string>
    <string name="sc_1">First, a timer has two elements, a time and a label. Both the time and the
        label can be set by the user when the timer is created. You can also edit these values
        later by clicking on each timer.</string>
    <string name="sc_2">Sync to Database: Synchronizes the current timer list to database. When
        clicked, it displays the different possible synchronization choices.\nGet from Database:
        Downloads and updates the current timer list to the last saved list.\nClear list: Clears
        the current timer list.\nOptions: Displays an extra list of options e.g. About App.
    </string>
    <string name="sc_3">Play/Pause: Resumes or pauses the current running timer.\nRestart: Resets
        the value of all timers to their initial values.\nAdd New: Opens a dialog box where the user
        can add a timer with the specified time and label (Default list button in the dialog box
        will add several default timers to your list).</string>
    <string name="tips">Swipe left or right on a timer to remove it from the list.\nLong press a
    timer for >1s and then drag it up or down to move a timer up or down the list.</string>
</resources>
