<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="Instructions:"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/screenshot_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/screenshot"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/screenshop_timer_cut"
                android:maxWidth="@dimen/image_max_width"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:text="@string/sc_1"/>

            <ImageView
                android:id="@+id/screenshot_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/screenshot"
                android:src="@drawable/sc_top"
                android:maxWidth="@dimen/image_max_width"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/sc_2"/>

            <ImageView
                android:id="@+id/screenshot_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/screenshot"
                android:src="@drawable/sc_bottom"
                android:maxWidth="@dimen/image_max_width"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/sc_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="Tips:"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/tips"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>