<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="216dp"
                android:gravity="end|center_vertical">

                <!--
                <TextView
                    android:id="@+id/textToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Timers"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="left|center_vertical"/>
                -->

                <Button
                    android:id="@+id/button9"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="0dp"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_sync_white_32dp" />

                <Button
                    android:id="@+id/button10"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="0dp"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_cloud_download_white_32dp" />

            </LinearLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize" />

    <!--
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="46dp">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button9"
            android:text="Test 2" />

    </RelativeLayout>
    -->


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="3dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:text="@string/pause" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/button1"
            android:text="@string/start_over" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/button2"
            android:text="@string/remove_all" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/button3"
            android:text="@string/add_new" />

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>